@@ -21,6 +21,7 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.cli;
 
 import static java.util.logging.Level.FINE;
@@ -42,11 +43,14 @@ import java.net.URL;
 import java.net.URLConnection;
 import java.nio.ByteBuffer;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.nio.file.InvalidPathException;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.security.GeneralSecurityException;
 import java.security.KeyPair;
 import java.security.SecureRandom;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.List;
 import java.util.Locale;
 import java.util.Map;
@@ -59,7 +63,6 @@ import javax.net.ssl.HttpsURLConnection;
 import javax.net.ssl.SSLContext;
 import javax.net.ssl.SSLSession;
 import javax.net.ssl.TrustManager;
-import org.apache.commons.io.FileUtils;
 import org.apache.commons.lang.StringUtils;
 import org.glassfish.tyrus.client.ClientManager;
 import org.glassfish.tyrus.client.ClientProperties;
@@ -68,6 +71,7 @@ import org.glassfish.tyrus.container.jdk.client.JdkClientContainer;
 /**
  * CLI entry point to Jenkins.
  */
+@SuppressFBWarnings(value = "CRLF_INJECTION_LOGS", justification = "We don't care about this behavior")
 public class CLI {
 
     private CLI() {}
@@ -80,9 +84,10 @@ public class CLI {
      * @throws NotTalkingToJenkinsException when connection is not made to Jenkins service.
      */
     /*package*/ static void verifyJenkinsConnection(URLConnection c) throws IOException {
-        if (c.getHeaderField("X-Hudson")==null && c.getHeaderField("X-Jenkins")==null)
+        if (c.getHeaderField("X-Hudson") == null && c.getHeaderField("X-Jenkins") == null)
             throw new NotTalkingToJenkinsException(c);
     }
+
     /*package*/ static final class NotTalkingToJenkinsException extends IOException {
         NotTalkingToJenkinsException(String s) {
             super(s);
@@ -106,19 +111,19 @@ public class CLI {
         }
     }
 
-    private enum Mode {HTTP, SSH, WEB_SOCKET}
+    private enum Mode { HTTP, SSH, WEB_SOCKET }
+
     public static int _main(String[] _args) throws Exception {
         List<String> args = Arrays.asList(_args);
         PrivateKeyProvider provider = new PrivateKeyProvider();
 
         String url = System.getenv("JENKINS_URL");
 
-        if (url==null)
+        if (url == null)
             url = System.getenv("HUDSON_URL");
-        
+
         boolean noKeyAuth = false;
 
-        // TODO perhaps allow mode to be defined by environment variable too (assuming $JENKINS_USER_ID can be used for -user)
         Mode mode = null;
 
         String user = null;
@@ -130,10 +135,10 @@ public class CLI {
 
         boolean strictHostKey = false;
 
-        while(!args.isEmpty()) {
+        while (!args.isEmpty()) {
             String head = args.get(0);
             if (head.equals("-version")) {
-                System.out.println("Version: "+computeVersion());
+                System.out.println("Version: " + computeVersion());
                 return 0;
             }
             if (head.equals("-http")) {
@@ -167,9 +172,9 @@ public class CLI {
                 printUsage("-remoting mode is no longer supported");
                 return -1;
             }
-            if(head.equals("-s") && args.size()>=2) {
+            if (head.equals("-s") && args.size() >= 2) {
                 url = args.get(1);
-                args = args.subList(2,args.size());
+                args = args.subList(2, args.size());
                 continue;
             }
             if (head.equals("-noCertificateCheck")) {
@@ -185,15 +190,15 @@ public class CLI {
                         return true;
                     }
                 });
-                args = args.subList(1,args.size());
+                args = args.subList(1, args.size());
                 continue;
             }
             if (head.equals("-noKeyAuth")) {
-            	noKeyAuth = true;
-            	args = args.subList(1,args.size());
-            	continue;
+                noKeyAuth = true;
+                args = args.subList(1, args.size());
+                continue;
             }
-            if(head.equals("-i") && args.size()>=2) {
+            if (head.equals("-i") && args.size() >= 2) {
                 File f = getFileFromArguments(args);
                 if (!f.exists()) {
                     printUsage(Messages.CLI_NoSuchFileExists(f));
@@ -202,7 +207,7 @@ public class CLI {
 
                 provider.readFrom(f);
 
-                args = args.subList(2,args.size());
+                args = args.subList(2, args.size());
                 continue;
             }
             if (head.equals("-strictHostKey")) {
@@ -239,7 +244,7 @@ public class CLI {
             break;
         }
 
-        if(url==null) {
+        if (url == null) {
             printUsage(Messages.CLI_NoURL());
             return -1;
         }
@@ -263,11 +268,11 @@ public class CLI {
             url += '/';
         }
 
-        if(args.isEmpty())
-            args = Collections.singletonList("help"); // default to help
+        if (args.isEmpty())
+            args = List.of("help"); // default to help
 
         if (mode == null) {
-            mode = Mode.HTTP;
+            mode = Mode.WEB_SOCKET;
         }
 
         LOGGER.log(FINE, "using connection mode {0}", mode);
@@ -324,7 +329,13 @@ public class CLI {
 
     @SuppressFBWarnings(value = {"PATH_TRAVERSAL_IN", "URLCONNECTION_SSRF_FD"}, justification = "User provided values for running the program.")
     private static String readAuthFromFile(String auth) throws IOException {
-        return FileUtils.readFileToString(new File(auth.substring(1)), Charset.defaultCharset());
+        Path path;
+        try {
+            path = Paths.get(auth.substring(1));
+        } catch (InvalidPathException e) {
+            throw new IOException(e);
+        }
+        return Files.readString(path, Charset.defaultCharset());
     }
 
     @SuppressFBWarnings(value = {"PATH_TRAVERSAL_IN", "URLCONNECTION_SSRF_FD"}, justification = "User provided values for running the program.")
@@ -338,14 +349,16 @@ public class CLI {
             @Override
             public void onOpen(Session session, EndpointConfig config) {}
         }
+
         class Authenticator extends ClientEndpointConfig.Configurator {
             @Override
             public void beforeRequest(Map<String, List<String>> headers) {
                 if (factory.authorization != null) {
-                    headers.put("Authorization", Collections.singletonList(factory.authorization));
+                    headers.put("Authorization", List.of(factory.authorization));
                 }
             }
         }
+
         ClientManager client = ClientManager.createClient(JdkClientContainer.class.getName()); // ~ ContainerProvider.getWebSocketContainer()
         client.getProperties().put(ClientProperties.REDIRECT_ENABLED, true); // https://tyrus-project.github.io/documentation/1.13.1/index/tyrus-proprietary-config.html#d0e1775
         Session session = client.connectToServer(new CLIEndpoint(), ClientEndpointConfig.Builder.create().configurator(new Authenticator()).build(), URI.create(url.replaceFirst("^http", "ws") + "cli/ws"));
@@ -354,6 +367,7 @@ public class CLI {
             public void send(byte[] data) throws IOException {
                 session.getBasicRemote().sendBinary(ByteBuffer.wrap(data));
             }
+
             @Override
             public void close() throws IOException {
                 session.close();
@@ -477,19 +491,14 @@ public class CLI {
 
     private static String computeVersion() {
         Properties props = new Properties();
-        try {
-            InputStream is = CLI.class.getResourceAsStream("/jenkins/cli/jenkins-cli-version.properties");
-            if(is!=null) {
-                try {
-                    props.load(is);
-                } finally {
-                    is.close();
-                }
+        try (InputStream is = CLI.class.getResourceAsStream("/jenkins/cli/jenkins-cli-version.properties")) {
+            if (is != null) {
+                props.load(is);
             }
         } catch (IOException e) {
             e.printStackTrace(); // if the version properties is missing, that's OK.
         }
-        return props.getProperty("version","?");
+        return props.getProperty("version", "?");
     }
 
     /**
@@ -520,7 +529,7 @@ public class CLI {
     }
 
     private static void printUsage(String msg) {
-        if(msg!=null)   System.out.println(msg);
+        if (msg != null)   System.out.println(msg);
         System.err.println(usage());
     }
 
