@@ -1,18 +1,18 @@
 /*
  * The MIT License
- * 
+ *
  * Copyright (c) 2004-2009, Sun Microsystems, Inc., Kohsuke Kawaguchi
- * 
+ *
  * Permission is hereby granted, free of charge, to any person obtaining a copy
  * of this software and associated documentation files (the "Software"), to deal
  * in the Software without restriction, including without limitation the rights
  * to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
  * copies of the Software, and to permit persons to whom the Software is
  * furnished to do so, subject to the following conditions:
- * 
+ *
  * The above copyright notice and this permission notice shall be included in
  * all copies or substantial portions of the Software.
- * 
+ *
  * THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
  * IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
  * FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
@@ -21,31 +21,25 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.util;
 
-import static hudson.init.InitMilestone.JOB_CONFIG_ADAPTED;
-import static javax.servlet.http.HttpServletResponse.SC_INTERNAL_SERVER_ERROR;
-
 import edu.umd.cs.findbugs.annotations.SuppressFBWarnings;
-import hudson.init.Initializer;
-import hudson.triggers.SafeTimerTask;
+import hudson.Extension;
+import hudson.ExtensionList;
+import hudson.Main;
+import hudson.Util;
+import hudson.model.AdministrativeMonitor;
+import hudson.model.AperiodicWork;
 import java.io.File;
 import java.io.IOException;
-import java.lang.management.ManagementFactory;
-import java.lang.reflect.Method;
 import java.nio.charset.Charset;
+import java.nio.file.Files;
+import java.time.Duration;
 import java.util.Random;
-import java.util.concurrent.TimeUnit;
 import java.util.logging.Level;
 import java.util.logging.Logger;
-import javax.servlet.ServletContext;
-import javax.servlet.ServletException;
 import jenkins.model.Jenkins;
-import jenkins.util.Timer;
-import org.apache.commons.io.FileUtils;
-import org.kohsuke.stapler.StaplerRequest;
-import org.kohsuke.stapler.StaplerResponse;
-import org.kohsuke.stapler.interceptor.RequirePOST;
 
 /**
  * Makes sure that no other Hudson uses our {@code JENKINS_HOME} directory,
@@ -61,33 +55,23 @@ import org.kohsuke.stapler.interceptor.RequirePOST;
  * this file. In this way, while we cannot detect the problem right away, within a reasonable time frame
  * we can detect the collision.
  *
- * <p>
- * More traditional way of doing this is to use a lock file with PID in it, but unfortunately in Java,
- * there's no reliable way to obtain PID.
- *
  * @author Kohsuke Kawaguchi
  * @since 1.178
  */
-@SuppressFBWarnings(value="PREDICTABLE_RANDOM", justification = "The random is just used for load distribution.")
-public class DoubleLaunchChecker {
+@Extension
+public class DoubleLaunchChecker extends AdministrativeMonitor {
     /**
      * The timestamp of the owner file when we updated it for the last time.
      * 0 to indicate that there was no update before.
      */
     private long lastWriteTime = 0L;
 
-    /**
-     * Once the error is reported, the user can choose to ignore and proceed anyway,
-     * in which case the flag is set to true.
-     */
-    private boolean ignore = false;
-
-    private final Random random = new Random();
+    private boolean activated;
 
     public final File home;
 
     /**
-     * ID string of the other Hudson that we are colliding with. 
+     * ID string of the other Hudson that we are colliding with.
      * Can be null.
      */
     private String collidingId;
@@ -96,95 +80,77 @@ public class DoubleLaunchChecker {
         home = Jenkins.get().getRootDir();
     }
 
+    @Override
+    public String getDisplayName() {
+        return Messages.DoubleLaunchChecker_duplicate_jenkins_checker();
+    }
+
+    @Override
+    public boolean isActivated() {
+        return activated;
+    }
+
     protected void execute() {
-        File timestampFile = new File(home,".owner");
+        LOGGER.fine("running detector");
+        File timestampFile = new File(home, ".owner");
 
         long t = timestampFile.lastModified();
-        if(t!=0 && lastWriteTime!=0 && t!=lastWriteTime && !ignore) {
+        if (t != 0 && lastWriteTime != 0 && t != lastWriteTime && isEnabled()) {
             try {
-                collidingId = FileUtils.readFileToString(timestampFile, Charset.defaultCharset());
+                collidingId = Files.readString(Util.fileToPath(timestampFile), Charset.defaultCharset());
             } catch (IOException e) {
                 LOGGER.log(Level.SEVERE, "Failed to read collision file", e);
             }
             // we noticed that someone else have updated this file.
-            // switch GUI to display this error.
-            Jenkins.get().servletContext.setAttribute("app",this);
-            LOGGER.severe("Collision detected. timestamp="+t+", expected="+lastWriteTime);
+            activated = true;
+            LOGGER.severe("Collision detected. timestamp=" + t + ", expected=" + lastWriteTime);
             // we need to continue updating this file, so that the other Hudson would notice the problem, too.
         }
 
         try {
-            FileUtils.writeStringToFile(timestampFile, getId(), Charset.defaultCharset());
+            Files.writeString(Util.fileToPath(timestampFile), getId(), Charset.defaultCharset());
             lastWriteTime = timestampFile.lastModified();
         } catch (IOException e) {
+            LOGGER.log(Level.FINE, null, e);
             // if failed to write, err on the safe side and assume things are OK.
-            lastWriteTime=0;
+            lastWriteTime = 0;
         }
-
-        schedule();
     }
 
     /**
      * Figures out a string that identifies this instance of Hudson.
      */
     public String getId() {
-        Jenkins h = Jenkins.get();
-
-        // in servlet 2.5, we can get the context path
-        String contextPath="";
-        try {
-            Method m = ServletContext.class.getMethod("getContextPath");
-            contextPath = " contextPath=\"" + m.invoke(h.servletContext) + "\"";
-        } catch (RuntimeException e) {
-            throw e;
-        } catch (Exception e) {
-            // maybe running with Servlet 2.4
-        }
-
-        return h.hashCode()+contextPath+" at "+ManagementFactory.getRuntimeMXBean().getName();
+        return Long.toString(ProcessHandle.current().pid());
     }
 
     public String getCollidingId() {
         return collidingId;
     }
 
-    /**
-     * Schedules the next execution.
-     */
-    public void schedule() {
-        // randomize the scheduling so that multiple Hudson instances will write at the file at different time
-        long MINUTE = 1000*60;
+    @SuppressFBWarnings(value = "PREDICTABLE_RANDOM", justification = "The random is just used for load distribution.")
+    @Extension
+    public static final class Schedule extends AperiodicWork {
 
-        Timer.get()
-            .schedule(new SafeTimerTask() {
-                @Override
-                protected void doRun() {
-                    execute();
-                }
-            }, (random.nextInt(30) + 60) * MINUTE, TimeUnit.MILLISECONDS);
-    }
+        private final Random random = new Random();
 
-    @Initializer(after= JOB_CONFIG_ADAPTED)
-    public static void init() {
-        new DoubleLaunchChecker().schedule();
-    }
+        @Override
+        public AperiodicWork getNewInstance() {
+            // Awkward to use DoubleLaunchChecker itself as the AperiodicWork since it is stateful, and we may not return this.
+            return new Schedule();
+        }
 
-    /**
-     * Serve all URLs with the index view.
-     */
-    public void doDynamic(StaplerRequest req, StaplerResponse rsp) throws IOException, ServletException {
-        rsp.setStatus(SC_INTERNAL_SERVER_ERROR);
-        req.getView(this,"index.jelly").forward(req,rsp);
-    }
+        @Override
+        public long getRecurrencePeriod() {
+            // randomize the scheduling so that multiple Jenkins instances will write at the file at different time
+            return (Main.isUnitTest ? Duration.ofSeconds(random.nextInt(10) + 20) : Duration.ofMinutes(random.nextInt(30) + 60)).toMillis();
+        }
 
-    /**
-     * Ignore the problem and go back to using Hudson.
-     */
-    @RequirePOST
-    public void doIgnore(StaplerRequest req, StaplerResponse rsp) throws IOException {
-        ignore = true;
-        Jenkins.get().servletContext.setAttribute("app", Jenkins.get());
-        rsp.sendRedirect2(req.getContextPath()+'/');
+        @Override
+        protected void doAperiodicRun() {
+            ExtensionList.lookupSingleton(DoubleLaunchChecker.class).execute();
+        }
+
     }
 
     private static final Logger LOGGER = Logger.getLogger(DoubleLaunchChecker.class.getName());
