@@ -38,6 +38,7 @@ import hudson.scm.SCM;
 import hudson.triggers.SCMTrigger;
 import java.util.Collection;
 import java.util.Collections;
+import java.util.Set;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import jenkins.model.ParameterizedJobMixIn;
@@ -120,21 +121,27 @@ public interface SCMTriggerItem {
 
         private static final class Bridge implements SCMTriggerItem {
             private final SCMedItem delegate;
+
             Bridge(SCMedItem delegate) {
                 this.delegate = delegate;
             }
+
             @Override public Item asItem() {
                 return delegate.asProject();
             }
+
             @Override public int getNextBuildNumber() {
                 return delegate.asProject().getNextBuildNumber();
             }
+
             @Override public int getQuietPeriod() {
                 return delegate.asProject().getQuietPeriod();
             }
+
             @Override public QueueTaskFuture<?> scheduleBuild2(int quietPeriod, Action... actions) {
                 return delegate.asProject().scheduleBuild2(quietPeriod, null, actions);
             }
+
             @Override public PollingResult poll(TaskListener listener) {
                 SCMDecisionHandler veto = SCMDecisionHandler.firstShouldPollVeto(asItem());
                 if (veto != null && !veto.shouldPoll(asItem())) {
@@ -143,9 +150,11 @@ public interface SCMTriggerItem {
                 }
                 return delegate.poll(listener);
             }
+
             @Override public SCMTrigger getSCMTrigger() {
                 return delegate.asProject().getTrigger(SCMTrigger.class);
             }
+
             @Override public Collection<? extends SCM> getSCMs() {
                 return resolveMultiScmIfConfigured(delegate.asProject().getScm());
             }
@@ -159,10 +168,10 @@ public interface SCMTriggerItem {
                     return (Collection<? extends SCM>) scm.getClass().getMethod("getConfiguredSCMs").invoke(scm);
                 } catch (Exception x) {
                     Logger.getLogger(SCMTriggerItem.class.getName()).log(Level.WARNING, null, x);
-                    return Collections.singleton(scm);
+                    return Set.of(scm);
                 }
             } else {
-                return Collections.singleton(scm);
+                return Set.of(scm);
             }
         }
 
