@@ -1,17 +1,16 @@
 package jenkins.security;
 
-import static org.hamcrest.CoreMatchers.containsString;
-import static org.hamcrest.CoreMatchers.not;
-import static org.hamcrest.MatcherAssert.assertThat;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNull;
+import static org.junit.Assert.assertThrows;
 import static org.junit.Assert.assertTrue;
 
 import hudson.FilePath;
 import hudson.Functions;
 import java.io.File;
-import java.nio.charset.Charset;
-import org.apache.commons.io.FileUtils;
+import java.nio.charset.MalformedInputException;
+import java.nio.charset.StandardCharsets;
+import java.nio.file.Files;
 import org.junit.Rule;
 import org.junit.Test;
 import org.junit.rules.TemporaryFolder;
@@ -30,14 +29,14 @@ public class DefaultConfidentialStoreTest {
 
         // basic roundtrip
         String str = "Hello world!";
-        store.store(key, str.getBytes());
-        assertEquals(str, new String(store.load(key)));
+        store.store(key, str.getBytes(StandardCharsets.UTF_8));
+        assertEquals(str, new String(store.load(key), StandardCharsets.UTF_8));
 
         // data storage should have some stuff
         assertTrue(new File(tmp, "test").exists());
         assertTrue(new File(tmp, "master.key").exists());
 
-        assertThat(FileUtils.readFileToString(new File(tmp, "test"), Charset.defaultCharset()), not(containsString("Hello"))); // the data shouldn't be a plain text, obviously
+        assertThrows(MalformedInputException.class, () -> Files.readString(tmp.toPath().resolve("test"), StandardCharsets.UTF_8)); // the data shouldn't be a plain text, obviously
 
         if (!Functions.isWindows()) {
             assertEquals(0700, new FilePath(tmp).mode() & 0777); // should be read only
