@@ -21,10 +21,12 @@
  * OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
  * THE SOFTWARE.
  */
+
 package hudson.model;
 
 import static org.hamcrest.MatcherAssert.assertThat;
 import static org.hamcrest.Matchers.containsString;
+import static org.hamcrest.Matchers.instanceOf;
 import static org.hamcrest.Matchers.notNullValue;
 import static org.junit.Assert.assertEquals;
 import static org.junit.Assert.assertNotEquals;
@@ -32,8 +34,6 @@ import static org.junit.Assert.assertNotNull;
 import static org.junit.Assert.assertNull;
 import static org.junit.Assert.assertTrue;
 
-import com.gargoylesoftware.htmlunit.Page;
-import com.gargoylesoftware.htmlunit.WebResponse;
 import hudson.EnvVars;
 import hudson.Functions;
 import hudson.Launcher;
@@ -49,12 +49,15 @@ import hudson.tasks.Shell;
 import hudson.util.OneShotEvent;
 import java.io.IOException;
 import java.util.Arrays;
-import java.util.Collections;
 import java.util.Set;
 import java.util.TreeSet;
 import java.util.concurrent.TimeUnit;
+import java.util.logging.Level;
+import java.util.logging.Logger;
 import net.sf.json.JSONArray;
 import net.sf.json.JSONObject;
+import org.htmlunit.Page;
+import org.htmlunit.WebResponse;
 import org.junit.ClassRule;
 import org.junit.Rule;
 import org.junit.Test;
@@ -64,6 +67,7 @@ import org.jvnet.hudson.test.FailureBuilder;
 import org.jvnet.hudson.test.FakeChangeLogSCM;
 import org.jvnet.hudson.test.Issue;
 import org.jvnet.hudson.test.JenkinsRule;
+import org.jvnet.hudson.test.LoggerRule;
 import org.jvnet.hudson.test.TestBuilder;
 import org.jvnet.hudson.test.TestExtension;
 import org.jvnet.hudson.test.UnstableBuilder;
@@ -76,35 +80,38 @@ public class AbstractBuildTest {
 
     @ClassRule
     public static BuildWatcher buildWatcher = new BuildWatcher();
-    
+
     @Rule
     public JenkinsRule j = new JenkinsRule();
-    
+
+    @Rule
+    public LoggerRule logging = new LoggerRule();
+
     @Test
     @Issue("JENKINS-30730")
     public void reportErrorShouldNotFailForNonPublisherClass() throws Exception {
         FreeStyleProject prj = j.createFreeStyleProject();
         ErroneousJobProperty erroneousJobProperty = new ErroneousJobProperty();
         prj.addProperty(erroneousJobProperty);
-        QueueTaskFuture<FreeStyleBuild> future = prj.scheduleBuild2(0);     
+        QueueTaskFuture<FreeStyleBuild> future = prj.scheduleBuild2(0);
         assertThat("Build should be actually scheduled by Jenkins", future, notNullValue());
         FreeStyleBuild build = future.get();
         j.assertLogContains(ErroneousJobProperty.ERROR_MESSAGE, build);
         j.assertLogNotContains(ClassCastException.class.getName(), build);
     }
-    
+
     /**
      * Job property, which always fails with an exception.
      */
     public static class ErroneousJobProperty extends JobProperty<FreeStyleProject> {
 
         public static final String ERROR_MESSAGE = "This publisher fails by design";
-        
+
         @Override
         public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) throws IOException {
             throw new IOException(ERROR_MESSAGE);
         }
-        
+
         @TestExtension("reportErrorShouldNotFailForNonPublisherClass")
         public static class DescriptorImpl extends JobPropertyDescriptor {}
     }
@@ -118,10 +125,10 @@ public class AbstractBuildTest {
 
         j.buildAndAssertSuccess(project);
 
-		EnvVars envVars = builder.getEnvVars();
-		assertEquals("value", envVars.get("KEY1"));
-		assertEquals("value", envVars.get("KEY2"));
-	}
+        EnvVars envVars = builder.getEnvVars();
+        assertEquals("value", envVars.get("KEY1"));
+        assertEquals("value", envVars.get("KEY2"));
+    }
 
     /**
      * Makes sure that raw console output doesn't get affected by XML escapes.
@@ -142,7 +149,7 @@ public class AbstractBuildTest {
         assertThat(rsp.getWebResponse().getContentAsString(), containsString(out));
     }
 
-    private void assertCulprits(AbstractBuild<?,?> b, String... expectedIds) throws IOException, SAXException {
+    private void assertCulprits(AbstractBuild<?, ?> b, String... expectedIds) throws IOException, SAXException {
         Set<String> actual = new TreeSet<>();
         for (User u : b.getCulprits()) {
             actual.add(u.getId());
@@ -156,13 +163,13 @@ public class AbstractBuildTest {
 
             Object culpritsArray = json.get("culprits");
             assertNotNull(culpritsArray);
-            assertTrue(culpritsArray instanceof JSONArray);
+            assertThat(culpritsArray, instanceOf(JSONArray.class));
             Set<String> fromApi = new TreeSet<>();
-            for (Object o : ((JSONArray)culpritsArray).toArray()) {
-                assertTrue(o instanceof JSONObject);
-                Object id = ((JSONObject)o).get("id");
+            for (Object o : ((JSONArray) culpritsArray).toArray()) {
+                assertThat(o, instanceOf(JSONObject.class));
+                Object id = ((JSONObject) o).get("id");
                 if (id instanceof String) {
-                    fromApi.add((String)id);
+                    fromApi.add((String) id);
                 }
             }
             assertEquals(fromApi, new TreeSet<>(Arrays.asList(expectedIds)));
@@ -185,7 +192,7 @@ public class AbstractBuildTest {
         // 2nd build
         scm.addChange().withAuthor("bob");
         p.getBuildersList().add(new FailureBuilder());
-        b = j.assertBuildStatus(Result.FAILURE, p.scheduleBuild2(0).get());
+        b = j.buildAndAssertStatus(Result.FAILURE, p);
         assertCulprits(b, "bob");
 
         // 3rd build. bob continues to be in culprit
@@ -202,13 +209,13 @@ public class AbstractBuildTest {
 
         // 4th build, unstable. culprit list should continue
         scm.addChange().withAuthor("dave");
-        p.getBuildersList().replaceBy(Collections.singleton(new UnstableBuilder()));
-        b = j.assertBuildStatus(Result.UNSTABLE, p.scheduleBuild2(0).get());
+        p.getBuildersList().replaceBy(Set.of(new UnstableBuilder()));
+        b = j.buildAndAssertStatus(Result.UNSTABLE, p);
         assertCulprits(b, "bob", "charlie", "dave");
 
         // 5th build, unstable. culprit list should continue
         scm.addChange().withAuthor("eve");
-        b = j.assertBuildStatus(Result.UNSTABLE, p.scheduleBuild2(0).get());
+        b = j.buildAndAssertStatus(Result.UNSTABLE, p);
         assertCulprits(b, "bob", "charlie", "dave", "eve");
 
         // 6th build, success, accumulation continues up to this point
@@ -241,8 +248,7 @@ public class AbstractBuildTest {
     public void doNotInterruptBuildAbruptlyWhenExceptionThrownFromBuildStep() throws Exception {
         FreeStyleProject p = j.createFreeStyleProject();
         p.getBuildersList().add(new ThrowBuilder());
-        FreeStyleBuild build = p.scheduleBuild2(0).get();
-        j.assertBuildStatus(Result.FAILURE, build);
+        FreeStyleBuild build = j.buildAndAssertStatus(Result.FAILURE, p);
         j.assertLogContains("Finished: FAILURE", build);
         j.assertLogContains("Build step 'ThrowBuilder' marked build as failure", build);
     }
@@ -276,9 +282,10 @@ public class AbstractBuildTest {
     }
 
     private static class ThrowBuilder extends Builder {
-        @Override public boolean perform(AbstractBuild<?,?> build, Launcher launcher, BuildListener listener) {
+        @Override public boolean perform(AbstractBuild<?, ?> build, Launcher launcher, BuildListener listener) {
             throw new NullPointerException();
         }
+
         @TestExtension("doNotInterruptBuildAbruptlyWhenExceptionThrownFromBuildStep")
         public static class DescriptorImpl extends Descriptor<Builder> {}
     }
@@ -286,6 +293,7 @@ public class AbstractBuildTest {
     @Test
     @Issue("JENKINS-10615")
     public void workspaceLock() throws Exception {
+        logging.record(Run.class, Level.FINER);
         FreeStyleProject p = j.createFreeStyleProject();
         p.setConcurrentBuild(true);
         OneShotEvent e1 = new OneShotEvent();
@@ -312,6 +320,7 @@ public class AbstractBuildTest {
 
                 return true;
             }
+
             private Object writeReplace() {
                 return new Object();
             }
@@ -328,6 +337,10 @@ public class AbstractBuildTest {
         assertNotEquals(b1.getStartCondition().get().getWorkspace(), b2.getStartCondition().get().getWorkspace());
 
         done.signal();
+        Logger.getLogger(AbstractBuildTest.class.getName()).info("Test done, letting builds complete…");
+        j.waitForCompletion(b1.get());
+        j.waitForCompletion(b2.get());
+        Logger.getLogger(AbstractBuildTest.class.getName()).info("…done.");
     }
 
     @Test
